# leeroopedia-mcp

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SKILL.md  docs.json  pyproject.toml  test_client.py  test_smoke.py
.github/workflows/: publish.yml
docs/: benchmarks.mdx  environment-variables.mdx  how-it-works.mdx  index.mdx  quickstart.mdx  troubleshooting.mdx
docs/connect/: chatgpt.mdx  claude-code.mdx  claude-desktop.mdx  codex.mdx  cursor.mdx
docs/tools/: build-plan.mdx  diagnose-failure.mdx  get-page.mdx  overview.mdx  propose-hypothesis.mdx  query-hyperparameter-priors.mdx  review-plan.mdx  search-knowledge.mdx  verify-code-math.mdx
examples/customer_support_agent/: README.md  SKILL.md  proposal.md  run_benchmark.py
examples/llm_post_training/: README.md  SKILL.md  evaluate_model.py  proposal.md  run_benchmark.py
examples/ml_inference_optimization/: README.md  SKILL.md  empty_mcp_config.json  generate_kernelbench_fixtures.py  kernelbench_proposal.md  run_benchmark.py
examples/self_evolve_rag/: README.md  eval_harness.py  generate_benchmarks.py  leeroopedia_tools.md  proposal.md  run_benchmark.py
leeroopedia_mcp/: __init__.py  client.py  config.py  server.py  tools.py
leeroopedia_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_client.py  test_smoke.py
