[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "leeroopedia-mcp"
version = "0.1.2"
description = "MCP server for Leeroopedia ML/AI knowledge search"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Kapso Team", email = "team@kapso.dev"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
leeroopedia-mcp = "leeroopedia_mcp.server:main"

[project.urls]
Homepage = "https://leeroopedia.com"
Documentation = "https://leeroopedia.com/docs"

[tool.setuptools.packages.find]
where = ["."]
include = ["leeroopedia_mcp*"]
